Bug 738189: Add memory reporting for Azure VRAM usage. r=jrmuizel